--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -29,7 +29,7 @@ tags:
 -	Наем глаштаев
 -	Расклейка обьявлений в общественных местах
 -	Наем агентов
--	
+
 **Посещение трактиров и таверн** обходится персонажу в 5 зм в день на взятки, выпивку и прочие расходы, что позволяет опросить достаточное количество людей, чтобы иметь шанс найти надежных наемников. При использовании этого метода персонаж делает проверку мудрости. Если проверка успешна, то вербовка наемника в этот день будет успешной. Персонаж может предпринять попытку найти наемника один раз в день, но не более одного дня на 1000 человек (минимум один раз), проживающих в городе, поселке или деревне, в месяц. Это означает, что если население данного города составляет 8 000 человек, то персонаж может пытаться найти наемников в этом городе восемь дней из каждого месяца, неограниченное количество раз. В городе с населением более 30 000 человек можно искать каждый день без перерыва.
 
 **Наем глашатая** обходится персонажу в 20 зм в день. Нанимаемый глашатай должен быть местным жителем, пользующимся уважением и доверием тех, кто его слышит. Крикун будет приводить потенциальных наемников к персонажу, освобождая его от других дел на большую часть дня. Наняв глашатая, персонаж может сделать две проверки мудрости в день, успех каждой из которых приводит к появлению наемника. Поскольку глашатаи пользуются большим спросом, нанимать глашатая можно только один раз в месяц на 3 000 человек, проживающих в городе, поселке или деревне. Таким образом, в городе с населением 8 000 человек глашатай может быть нанят три раза в месяц.
@@ -88,30 +88,69 @@ tags:
 
 ## Стоимость снаряжения
 
+У каждого солдата помимо доспехов и снаряжения есть стандартное снаряжение, указанное в таблице ниже.
+
 | Войска        | Снаряжение                                                                                                                                  | Стоимость, зм |
 |---------------|---------------------------------------------------------------------------------------------------------------------------------------------|---------------|
 | Любой всадник | Уздечка, военное седло, седельные сумки                                                                                                     | 26            |
 | Любой солдат  | Два набора униформы (обычная одежда) (1 зм), одеяло (0,5 зм), рюкзак (2 зм), бурдюк (0,2 зм), трутница (0,5), походный столовый набор (0,2) | 4,4           |
 
-| Вид войск             | Доспехи                                               | Оружие                                                                                                                             | Верховое животное                                              | Снаряжение, всего |
-|-----------------------|-------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|-------------------|
-| Лучник (короткий лук) | Стеганый доспех (5 зм)                                | Короткий лук (25 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                      | -                                                              | 48.4              |
-| Лучник (длинный лук)  | Кожаный доспех (10 зм)                                | Длинный лук (75 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                       | -                                                              | 103.4             |
-| Лучник, конный        | Клепаный кожаный доспех (45 зм), щит (10 зм)          | Составной длинный лук (150 зм), 2 колчана (2 зм), 40 стрел (2 зм), скимитар (25 зм), копье (1 зм)                                  | Легкий боевой конь (150 зм)                                    | 415.4             |
-| Арбалетчик, тяжелый   | Кольчуга (75 зм)                                      | Тяжелый арбалет (50 зм), 2 контейнера для болтов (2 зм), 40 арбалетных болтов (2 зм), длинный меч (15 зм), кинжал (2 зм)           | Мул (8 зм)                                                     | 184.4             |
-| Арбалетчик, легкий    | -                                                     | Легкий арбалет (25 зм), длинный меч (15 зм), кинжал (2 зм), 2 контейнера для арбалетных болтов (2 зм), 40 арбалетных болтов (2 зм) | -                                                              | 50.4              |
-| Арбалетчик, конный    | Клепаный кожаный доспех (45 зм)                       | Легкий арбалет (25 зм), длинный меч (15 зм), 2 контейнера для арбалетных болтов (2 зм), 40 арбалетных болтов (2 зм)                | Легкий боевой конь (150 зм)                                    | 269.4             |
-| Щитоносец             | Стеганый доспех (5 зм), щит (10 зм), павиза (20 зм)   | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | -                                                              | 57.9              |
-| Пращник               | Клепаный кожаный доспех (45 зм), небольшой щит (5 зм) | Праща (1 см), 40 снарядов для пращи (2 зм), короткий меч (10 зм)                                                                   | -                                                              | 66.5              |
-| Кавалерия, легкая     | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), скимитар (25 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                                               | Легкий боевой конь (150 зм)                                    | 248.4             |
-| Кавалерия, средняя    | Чешуйчатый доспех (50 зм), щит (10 зм)                | Копье (1 зм), длинный меч (15 зм), булава (5 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                             | Средний боевой конь (250 зм), клепаный кожаный доспех (180 зм) | 568.4             |
-| Кавалерия, тяжелая    | Пластинчатый доспех (200 зм), щит (10 зм)             | Рыцарское копье (10 зм), длинный меч (15 зм), боевой молот (15 зм)                                                                 | Тяжелый боевой конь (400 зм), кольчужный доспех (300 зм)       | 970.4             |
-| Пехота, легкая        | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), короткий меч (10 зм), 5 пилумов (2,5 зм)                                                                             | -                                                              | 32.9              |
-| Пехота, средняя       | Чешуйчатый доспех (50 зм), щит (10 зм)                | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | -                                                              | 82.9              |
-| Пехота, тяжелая       | Пластинчатый доспех (200 зм)                          | Длинный меч (15 зм), глефа (20 зм), кинжал (2 зм)                                                                                  | -                                                              | 241.4             |
-| Пехота, ополчение     | Кожаный доспех (10 зм), щит (10 зм)                   | Копье (1 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                                                                 | -                                                              | 52.4              |
-| Пехота, иррегулярная  | Щит (10 зм)                                           | Боевой топор (10 зм), копье (1 зм)                                                                                                 | -                                                              | 25.4              |
-| Хобилар, тяжелый      | Пластинчатый доспех (200 зм), щит (10 зм)             | Длинный меч (15 зм), кинжал (1 зм)                                                                                                 | Ездовая лошадь (75 зм)                                         | 331.4             |
-| Хобилар, легкий       | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | Мул (8 зм)                                                     | 71.9              |
-| Пехотинец, пикинер    | Чешуйчатый доспех (50 зм)                             | Пика (5 зм), длинный меч (15 зм)                                                                                                   |                                                                | 74.4              |
-| Пехотинец, алебардист | Пластинчатый доспех (200 зм)                          | Алебарда (20 зм), короткий меч (10 зм)                                                                                             |                                                                | 234.4             |
+В следующей таблице приведена разбивка
+
+| Вид войск              | Доспехи                                               | Оружие                                                                                                                             | Верховое животное                                              | Снаряжение, всего | Зарплата, зм/день |
+|------------------------|-------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|-------------------|-------------------|
+| Лучник (короткий лук)  | Стеганый доспех (5 зм)                                | Короткий лук (25 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                      | -                                                              | 48,4              | 4                 |
+| Лучник (длинный лук)   | Кожаный доспех (10 зм)                                | Длинный лук (75 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                       | -                                                              | 103,4             | 8                 |
+| Лучник, конный         | Клепаный кожаный доспех (45 зм), щит (10 зм)          | Составной длинный лук (150 зм), 2 колчана (2 зм), 40 стрел (2 зм), скимитар (25 зм), копье (1 зм)                                  | Легкий боевой конь (150 зм)                                    | 415,4             | 4                 |
+| Арбалетчик, тяжелый    | Кольчуга (75 зм)                                      | Тяжелый арбалет (50 зм), 2 контейнера для болтов (2 зм), 40 арбалетных болтов (2 зм), длинный меч (15 зм), кинжал (2 зм)           | Мул (8 зм)                                                     | 184,4             | 3                 |
+| Арбалетчик, легкий     | -                                                     | Легкий арбалет (25 зм), длинный меч (15 зм), кинжал (2 зм), 2 контейнера для арбалетных болтов (2 зм), 40 арбалетных болтов (2 зм) | -                                                              | 50,4              | 2                 |
+| Арбалетчик, конный     | Клепаный кожаный доспех (45 зм)                       | Легкий арбалет (25 зм), длинный меч (15 зм), 2 контейнера для арбалетных болтов (2 зм), 40 арбалетных болтов (2 зм)                | Легкий боевой конь (150 зм)                                    | 269,4             | 4                 |
+| Щитоносец              | Стеганый доспех (5 зм), щит (10 зм), павиза (20 зм)   | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | -                                                              | 57,9              | 1                 |
+| Пращник                | Клепаный кожаный доспех (45 зм), небольшой щит (5 зм) | Праща (1 см), 40 снарядов для пращи (2 зм), короткий меч (10 зм)                                                                   | -                                                              | 66,5              | 4                 |
+| Кавалерия, легкая      | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), скимитар (25 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                                               | Легкий боевой конь (150 зм)                                    | 248,4             | 4                 |
+| Кавалерия, средняя     | Чешуйчатый доспех (50 зм), щит (10 зм)                | Копье (1 зм), длинный меч (15 зм), булава (5 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                             | Средний боевой конь (250 зм), клепаный кожаный доспех (180 зм) | 568,4             | 8                 |
+| Кавалерия, тяжелая     | Пластинчатый доспех (200 зм), щит (10 зм)             | Рыцарское копье (10 зм), длинный меч (15 зм), боевой молот (15 зм)                                                                 | Тяжелый боевой конь (400 зм), кольчужный доспех (300 зм)       | 970,4             | 12                |
+| Пехота, легкая         | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), короткий меч (10 зм), 5 пилумов (2,5 зм)                                                                             | -                                                              | 32,9              | 2                 |
+| Пехота, средняя        | Чешуйчатый доспех (50 зм), щит (10 зм)                | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | -                                                              | 82,9              | 3                 |
+| Пехота, тяжелая        | Пластинчатый доспех (200 зм)                          | Длинный меч (15 зм), глефа (20 зм), кинжал (2 зм)                                                                                  | -                                                              | 241,4             | 4                 |
+| Пехота, ополчение      | Кожаный доспех (10 зм), щит (10 зм)                   | Копье (1 зм), короткий лук (25 зм), колчан (1 зм), 20 стрел (1 зм)                                                                 | -                                                              | 52,4              | 1                 |
+| Пехота, иррегулярная   | Щит (10 зм)                                           | Боевой топор (10 зм), копье (1 зм)                                                                                                 | -                                                              | 25,4              | 1                 |
+| Хобилар, тяжелый       | Пластинчатый доспех (200 зм), щит (10 зм)             | Длинный меч (15 зм), кинжал (1 зм)                                                                                                 | Ездовая лошадь (75 зм)                                         | 331,4             | 4                 |
+| Хобилар, легкий        | Стеганый доспех (5 зм), щит (10 зм)                   | Копье (1 зм), длинный меч (15 зм), 5 пилумов (2,5 зм)                                                                              | Мул (8 зм)                                                     | 71,9              | 3                 |
+| Пехотинец, пикинер     | Чешуйчатый доспех (50 зм)                             | Пика (5 зм), длинный меч (15 зм)                                                                                                   | -                                                              | 74,4              | 2                 |
+| Пехотинец, алебардист  | Пластинчатый доспех (200 зм)                          | Алебарда (20 зм), короткий меч (10 зм)                                                                                             | -                                                              | 234,4             | 4                 |
+| Солдат, средняя пехота | Чешуйчатый доспех (50 зм), щит (10 зм)                | длинный меч (15 зм)                                                                                                                | -                                                              | 79,4              | 2                 |
+| Пехота, страж          | Кольчужная рубаха (50 зм), щит (10 зм)                | Копье (1 зм)                                                                                                                       | -                                                              | 65,4              | 2                 |
+| Солдат, лучник         | Кожаный доспех (10 зм)                                | Длинный лук (75 зм), 1 колчан (1 зм), 20 стрел (1 зм), кинжал (2 зм)                                                               | -                                                              | 93,4              | 4                 |
+| Солдат, тяжелая пехота | Пластинчатый доспех (200 зм), щит (10 зм)             | Длинный меч (15 зм)                                                                                                                |                                                                | 229,4             | 4                 |
+| Солдат, конный лучник  | Клепаный кожаный доспех (45 зм)                       | Короткий лук (25 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                      | Легкий боевой конь (150 зм)                                    | 264,4             | 4                 |
+
+Стоимость найма, зм/день и ожидаемые ПО и уровни наемников исходя из оплаты
+
+| Вид войска             | Зарплата, зм/день | ПО исходя из оплаты | Ожидаемый уровень |
+|------------------------|-------------------|---------------------|-------------------|
+| Лучник (короткий лук)  | 4                 | 0,5                 | 2                 |
+| Лучник (длинный лук)   | 8                 | 2                   | 6                 |
+| Лучник, конный         | 4                 | 0,5                 | 2                 |
+| Арбалетчик, тяжелый    | 3                 | 0,25                | 1                 |
+| Арбалетчик, легкий     | 2                 | 0,125               | 0,5               |
+| Арбалетчик, конный     | 4                 | 0,5                 | 2                 |
+| Щитоносец              | 1                 | 0,125               | 0,5               |
+| Пращник                | 4                 | 0,5                 | 2                 |
+| Кавалерия, легкая      | 4                 | 0,5                 | 2                 |
+| Кавалерия, средняя     | 8                 | 2                   | 5                 |
+| Кавалерия, тяжелая     | 12                | 2                   | 7                 |
+| Пехота, легкая         | 2                 | 0,125               | 0,5               |
+| Пехота, средняя        | 3                 | 0,25                | 1                 |
+| Пехота, тяжелая        | 4                 | 0,5                 | 2                 |
+| Пехота, ополчение      | 1                 | 0,125               | 0,5               |
+| Пехота, иррегулярная   | 1                 | 0,125               | 0,5               |
+| Хобилар, тяжелый       | 4                 | 0,5                 | 2                 |
+| Хобилар, легкий        | 3                 | 0,25                | 1                 |
+| Пехотинец, пикинер     | 2                 | 0,125               | 0,5               |
+| Пехотинец, алебардист  | 4                 | 0,5                 | 2                 |
+| Солдат, средняя пехота | 2                 | 0,125               | 0,5               |
+| Пехота, страж          | 2                 | 0,125               | 0,5               |
+| Солдат, лучник         | 4                 | 0,5                 | 2                 |
+| Солдат, тяжелая пехота | 4                 | 0,5                 | 2                 |
+| Солдат, конный лучник  | 4                 | 0,5                 | 2                 |
