--- a/src/content/posts/articles/about-mercenaries-1.mdx
+++ b/src/content/posts/articles/about-mercenaries-1.mdx
@@ -22,7 +22,7 @@ tags:
 
 [Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
-[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+~~[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)~~
 
 ---
 ## Наемные солдаты
