--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -154,3 +154,52 @@ tags:
 | Солдат, лучник         | 4                 | 0,5                 | 2                 |
 | Солдат, тяжелая пехота | 4                 | 0,5                 | 2                 |
 | Солдат, конный лучник  | 4                 | 0,5                 | 2                 |
+
+Стоимость снаряжения и зарплата разных видов войск
+
+| Вид войска             | Снаряжение, всего | Зарплата, зм/день |
+|------------------------|-------------------|-------------------|
+| Лучник (короткий лук)  | 48,4              | 4                 |
+| Лучник (длинный лук)   | 103,4             | 8                 |
+| Лучник, конный         | 415,4             | 4                 |
+| Арбалетчик, тяжелый    | 184,4             | 3                 |
+| Арбалетчик, легкий     | 50,4              | 2                 |
+| Арбалетчик, конный     | 269,4             | 4                 |
+| Щитоносец              | 57,9              | 1                 |
+| Пращник                | 66,5              | 4                 |
+| Кавалерия, легкая      | 248,4             | 4                 |
+| Кавалерия, средняя     | 568,4             | 8                 |
+| Кавалерия, тяжелая     | 970,4             | 12                |
+| Пехота, легкая         | 32,9              | 2                 |
+| Пехота, средняя        | 82,9              | 3                 |
+| Пехота, тяжелая        | 241,4             | 4                 |
+| Пехота, ополчение      | 52,4              | 1                 |
+| Пехота, иррегулярная   | 25,4              | 1                 |
+| Хобилар, тяжелый       | 331,4             | 4                 |
+| Хобилар, легкий        | 71,9              | 3                 |
+| Пехотинец, пикинер     | 74,4              | 2                 |
+| Пехотинец, алебардист  | 234,4             | 4                 |
+| Солдат, средняя пехота | 79,4              | 2                 |
+| Пехота, страж          | 65,4              | 2                 |
+| Солдат, лучник         | 93,4              | 4                 |
+| Солдат, тяжелая пехота | 229,4             | 4                 |
+| Солдат, конный лучник  | 264,4             | 4                 |
+
+
+Можно также получить зависимость оплаты наемных солдат в зависимости от уровня
+
+| Уровень | ПО    | Зарплата, зм/день |
+|---------|-------|-------------------|
+| 0,5     | 0,125 | 2                 |
+| 1       | 0,25  | 3                 |
+| 2       | 0,25  | 3                 |
+| 3       | 0,5   | 4                 |
+| 4       | 1     | 5                 |
+| 5       | 1     | 8                 |
+| 6       | 2     | 10                |
+| 7       | 2     | 15                |
+| 8       | 3     | 20                |
+| 9       | 3     | 25                |
+| 10      | 4     | 30                |
+| 11      | 4     | 35                |
+| 12      | 5     | 40                |
