--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -213,7 +213,7 @@ tags:
 | Любой всадник | Уздечка, военное седло, седельные сумки                                                                                                     | 26            |
 | Любой солдат  | Два набора униформы (обычная одежда) (1 зм), одеяло (0,5 зм), рюкзак (2 зм), бурдюк (0,2 зм), трутница (0,5), походный столовый набор (0,2) | 4,4           |
 
-В следующей таблице приведена разбивка
+В следующей таблице приведены доспехи, оружие и скакун вида войск, а также итоговая стоимость снаряжения (с учетом снаряжения которое есть у любого солдата)
 
 | Вид войск              | Доспехи                                               | Оружие                                                                                                                             | Верховое животное                                              | Снаряжение, всего | Зарплата, зм/день |
 |------------------------|-------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|-------------------|-------------------|
@@ -242,6 +242,9 @@ tags:
 | Солдат, лучник         | Кожаный доспех (10 зм)                                | Длинный лук (75 зм), 1 колчан (1 зм), 20 стрел (1 зм), кинжал (2 зм)                                                               | -                                                              | 93,4              | 4                 |
 | Солдат, тяжелая пехота | Пластинчатый доспех (200 зм), щит (10 зм)             | Длинный меч (15 зм)                                                                                                                |                                                                | 229,4             | 4                 |
 | Солдат, конный лучник  | Клепаный кожаный доспех (45 зм)                       | Короткий лук (25 зм), 2 колчана (2 зм), 40 стрел (2 зм), короткий меч (10 зм)                                                      | Легкий боевой конь (150 зм)                                    | 264,4             | 4                 |
+
+
+Далее исходя из ожидаемой зарплаты определем ожидаемые ПО и уровень наемного солдата.
 
 Стоимость найма, зм/день и ожидаемые ПО и уровни наемников исходя из оплаты
 
@@ -325,7 +328,6 @@ tags:
 ## Создание собственных войск
 
 Если персонажи являются военачальниками или местными лидерами они могут вместо наемников привлекать местное население на службу. В этом случае, привлеченных солдат можно использовать в качестве гарнизонов или военной силы, но не спутников авантюристов. Стоимсть их найма при этом включает стоимость необходимого снаряжения, а вместо полной оплаты им платится половина + стоимость содержания в местах дислокации (или во время путешествия).
-
 
 
 ## ДОПОЛНИТЕЛЬНЫЕ ЗАТРАТЫ
