--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -16,11 +16,13 @@ tags:
 
 ---
 
-[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
-~~[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)~~
+[Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
 
 ---
 
@@ -319,16 +321,18 @@ tags:
 
 В следующей части мы говорим больше об экономической составляющей - как проходит найм, что входит в условия найма, какие могут быть условия контрактов, как снарядить собственные войска и т.д.
 
-~~[ПРОДОЛЖЕНИЕ СЛЕДУЕТ](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)~~
+[ПРОДОЛЖЕНИЕ СЛЕДУЕТ](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
 ---
 
 [Про наемных солдат](https://cyborgsandmages.com/posts/articles/about-soldiers)
 
-[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
-~~[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)~~
+[Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
 
 ---
