--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -1,5 +1,5 @@
 ---
-title: Про солдат, наемных и не только, часть 3
+title: Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат
 description: "АВТОРСКАЯ СТАТЬЯ Часть 3 Расширенное описание особенностей наемных солдат и взаимодействия персонажей с ними. Виды войск #mercenaries #dnd5e #hirelings #henchmens #cored20rpg"
 date: 2023-10-23 16:00
 tags:
@@ -12,11 +12,15 @@ tags:
   - Последователи
 ---
 
-[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
-[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+[Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
+
+Скажу сразу - эта статья явно сыровата и требуется её доработка, но доработка на практике, поэтому, пока в  текущем виде, эта статья так и останется
 
 ---
 
