--- a/src/content/posts/articles/about-mercenaries-1.mdx
+++ b/src/content/posts/articles/about-mercenaries-1.mdx
@@ -18,11 +18,11 @@ tags:
 
 ---
 
-[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
-~~[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)~~
+[Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
 ---
 ## Наемные солдаты
@@ -201,3 +201,11 @@ tags:
 [Средневековая городская стража (средневековая полиция)](https://cyborgsandmages.com/posts/articles/medieval-watch)
 
 [Зарисовка правил для отряда существ (копья), часть 1](https://cyborgsandmages.com/posts/articles/about-mass-combat-draft-of-troop-rules-1)
+
+---
+
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+
+[Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+
+[Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
