--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -14,6 +14,10 @@ tags:
 
 В предыдущей статье мы начали рассматривать наемных солдат, в частности рассмотрели как изменяется стоимость найма в зависимости от различных условий и получили представление об офицерах среди наемников и что каждая из этих ролей обозначает.
 
+
+Ваши отзывы позволят улучшить качество этих статей, в чем они явно нуждаются.
+
+
 ---
 
 [Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
@@ -21,8 +25,6 @@ tags:
 [Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
 [Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
-
----
 
 ---
 
@@ -329,7 +331,7 @@ tags:
 
 [Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
 [Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
