--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -14,13 +14,15 @@ tags:
 
 [Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
 
-[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+[Про солдат, наемных и не только, Часть 2, виды войск и их статблоки](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
 [Про солдат, наемных и не только, часть 3, стоимость снаряжения, зарплата и процедура найма наемных солдат](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
 ---
 
 Скажу сразу - эта статья явно сыровата и требуется её доработка, но доработка на практике, поэтому, пока в  текущем виде, эта статья так и останется
+
+Ваши отзывы позволят улучшить качество этих статей, в чем они явно нуждаются.
 
 ---
 
