--- a/src/content/posts/articles/about-mercenaries-1.mdx
+++ b/src/content/posts/articles/about-mercenaries-1.mdx
@@ -16,6 +16,8 @@ tags:
 
 Эта статья расширяет кругозор игроков и мастеров в отношении наемных солдат.
 
+Ваши отзывы позволят улучшить качество этих статей, в чем они явно нуждаются.
+
 ---
 
 [Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
