--- a/src/content/posts/articles/about-mercenaries-3.mdx
+++ b/src/content/posts/articles/about-mercenaries-3.mdx
@@ -209,6 +209,15 @@ tags:
 - питание;
 - размещение;
 
+**Долгосрочный контракт - охрана поселения или крепости.** Срок заключения - минимум 3 месяца. Является базовым вариантом найма боевых наемников.
+
+**Краткосрочный контракт - охрана персонажей.** Срок заключения - измеряется в днях. Предполагается, что при таком контракте базовая оплата идет за факт наличия боевых наемников вместе с персонажами, а в случае боевых столкновений будет выплачиваться боевая премия в пятикратном размере базовой оплаты за день. При этом боевые наемники, как правило, не идут вместе с персонажами в подземелья или высоко рискованные миссии.
+
+**Краткосрочный контракт - помощь персонажам в любой деятельности.** Срок заключения - измеряется в днях. Предполагается, что при таком контракте имеются высокие риски, поэтому стоимость найма на такой контракт составляет тройную базовую оплату за день и долю добычи/сокровищ/награды. С таким контрактом, боевые наемники будут сопровождать персонажей везде в их деятельности.
+
+**Наемник (Ветеран).** Лучник, рыцарь или ветеран. Наемник-ветеран берет 20 зм в день или 5 зм в день вместе с равной долей любой добычи, которую вы можете получить. Ветераны не подвержены боевому духу , пока вы относитесь к ним с уважением, поскольку трусы долго не задерживаются в наемническом бизнесе.
+
+У ветеранов наемников образ жизни как правило состоятельный (4 зм/день и более).
 
 ## Стоимость снаряжения
 
