--- a/src/content/posts/core-d20/design-diary-about-system.mdx
+++ b/src/content/posts/core-d20/design-diary-about-system.mdx
@@ -5,7 +5,7 @@ date: 2023-05-25
 tags:
   - Core d20 RPG
   - Мысли вслух
-  - Дневник разработчика
+  - Дневник разработки
   - Взаимосвязь элементов правил
 ---
 
