--- a/src/content/posts/core-d20/design-diary-equipment-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-1.mdx
@@ -6,6 +6,7 @@ tags:
   - Core d20 RPG
   - Homebrew
   - Снаряжение
+  - Дневник разработки
 ---
 
 Это очередная статья посвященная нашему набору домашних правил. Весь цикл доступен по ссылке - [Киборги и Чародеи - Core d20 RPG (cyborgsandmages.com)](https://cyborgsandmages.com/category/articles/our-materials/cored20rpg/)
