--- a/src/content/posts/core-d20/design-diary-equipment-2.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-2.mdx
@@ -4,7 +4,7 @@ description: Во второй части заметок про разработ
 date: 2023-05-25
 tags:
   - Мысли вслух
-  - Дневник разработчика
+  - Дневник разработки
   - Снаряжение
   - Core d20 RPG
 ---
