--- a/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-2.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-2.mdx
@@ -7,7 +7,7 @@ tags:
   - Мысли вслух
   - Снаряжение
   - Снаряжение авантюриста
-  - Дневник разработчика
+  - Дневник разработки
 ---
 
 Продолжим…
