--- a/src/content/posts/core-d20/design-diary-equipment-armor-2.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-armor-2.mdx
@@ -7,7 +7,7 @@ tags:
   - Мысли вслух
   - Снаряжение
   - Доспехи
-  - Дневник разработчика
+  - Дневник разработки
 ---
 
 Ранее я уже писал про изменения в разделе доспехов (см. [часть 1](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-armor-1))
