--- a/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-adventurers-gear-1.mdx
@@ -7,7 +7,7 @@ tags:
   - Мысли вслух
   - Снаряжение
   - Снаряжение авантюриста
-  - Дневник разработчика
+  - Дневник разработки
 ---
 
 Рассматривая часть главы Снаряжение, которая посвящена детальному обзору обмундированию и предметам, используемыми авантюристами, а в особенности учитывая ретроспективный опыт старых редакций и опыт сотен игр, легко заметить следующее:
