--- a/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
+++ b/src/content/posts/core-d20/design-diary-equipment-weapons-1.mdx
@@ -8,7 +8,7 @@ tags:
   - 'Снаряжение'
   - 'Сражение'
   - 'Мысли вслух'
-  - 'Дневник разработчика'
+  - 'Дневник разработки'
 ---
 
 Ранее я уже затрагивал темы связанные со снаряжением – см. [Мысли вслух. Дневник разработчика. Доспехи](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-armor-1), [Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 1](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-adventurers-gear-1) и [Мысли вслух. Дневник разработчика. Снаряжение авантюриста, часть 2](https://cyborgsandmages.com/posts/core-d20/design-diary-equipment-adventurers-gear-2), [Расширенные правила по щитам](https://cyborgsandmages.com/posts/core-d20/enhanced-shields).
