--- a/src/content/posts/articles/xethmar-1.mdx
+++ b/src/content/posts/articles/xethmar-1.mdx
@@ -45,3 +45,5 @@ tags:
 - летающие левиафаны дагратов с их талантом к биоинженерии вызывают все большее любопытство Министориума Доминиона;
 - реликвии, оставшиеся от времен Первой империи и энерго-кристаллы, необходимые для их работы;
 - легенды про Спящего и создание им Хранителей.
+
+[СТРАНИЦА НА WORLD ANVIL](https://www.worldanvil.com/w/xethamar-palant)
