--- a/src/content/posts/articles/xethmar-1.mdx
+++ b/src/content/posts/articles/xethmar-1.mdx
@@ -47,3 +47,8 @@ tags:
 - легенды про Спящего и создание им Хранителей.
 
 [СТРАНИЦА НА WORLD ANVIL](https://www.worldanvil.com/w/xethamar-palant)
+
+---
+
+## ПРОЧИЕ СТАТЬИ ПРО ЗЕТАМАР
+
