--- a/src/content/posts/articles/xethmar-1.mdx
+++ b/src/content/posts/articles/xethmar-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Зетамар - маготехнический сеттинг
-description: Вводное описание домашнего сеттинга Киборгов и Чародеев - Зетамара, мира в котором сплетаются воедино магия и технология
+description: АВТОРСКАЯ СТАТЬЯ Вводное описание домашнего сеттинга Киборгов и Чародеев - Зетамара, мира в котором сплетаются воедино магия и технология
 date: 2023-10-23 12:00
 tags:
   - Зетамар
