--- a/src/content/posts/translations/olddungeonmaaster-metals.mdx
+++ b/src/content/posts/translations/olddungeonmaaster-metals.mdx
@@ -8,7 +8,10 @@ tags:
   - Экономика
   - Металлы
 author: Old Dungeon Master
+cover: ~/assets/covers/olddungeonmaster-metals.webp
 ---
+
+
 
 | Металл          | Стоимость металла за фунт, зм | Вид            | КЗ | Описание                                                                                                                                                                                                                                                                           |
 |-----------------|-------------------------------|----------------|----|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
