--- a/src/content/posts/translations/olddungeonmaaster-metals.mdx
+++ b/src/content/posts/translations/olddungeonmaaster-metals.mdx
@@ -7,6 +7,8 @@ tags:
   - Core d20 RPG
   - Экономика
   - Металлы
+  - translate
+  - Перевод
 author: Old Dungeon Master
 cover: ~/assets/covers/olddungeonmaster-metals.webp
 ---
